# My-Digital-Key

./: README.md
app/: .babelrc  .eslintignore  package.json  settings.dev.json  settings.prod.json  start.sh  startC.sh
app/.meteor/: .id  packages  versions
app/client/: main.js
app/client/polyfills/: NodeListForEach.js
app/css/: base.css
app/imports/: ApolloClient.js  Head.jsx  MainApp.jsx  Panel.jsx
app/imports/api/files/: index.js
app/imports/api/redux/: localStorage.js.old
app/imports/startup/server/: fixtures.js  index.js  securityFixes.js
app/imports/ui/: index.js  scrollTopIfClient.js
app/imports/ui/variables/: theme.js
app/imports/utils/: query.js  slug.js
app/imports/utils/formatting/: capitalize.js  capitalizeFirstWord.js  index.js  number.js  phone.js  sanitize.js  upperCase.js
app/imports/utils/validation/: boolOr.js  checkCity.js  checkZipcode.js  digits.js  name.js  (+9 more)
app/public/favicons/: manifest.json
app/scripts/: eslint.sh
app/server/: humansTxt.js  main.js  robotsTxt.js  routes.js  sitemapXml.js
cloud/: .babelrc  .eslintrc  package.json
cloud/.meteor/: .id  packages  versions
cloud/client/: main.html
cloud/imports/resolvers/: index.js
cloud/imports/schema/: Query.graphql  User.graphql  index.js
cloud/imports/startup/: index.js
cloud/server/: main.js
css/home/: index.html  style.css
css/locks/: index.html  style.css
css/login/: index.html  style.css
css/menu/: index.html  style.css
css/users/: index.html  style.css
mobile/.meteor/: .id
mobile/client/: main.html
raspi/src/: CMakeLists.txt  main.cpp
(+91 files in other folders)
